# portfolio

./: .gitignore  compose.yaml  flake.nix  manifest.yaml
.github/workflows/: deploy.yaml  deploy.yml
client/: .fuse_hidden00005f8200000004  Dockerfile  next.config.ts  package.json
client/app/: layout.tsx  page.tsx
client/app/about/: page.tsx
client/app/blog/: page.tsx
client/app/contact/: page.tsx
client/app/education/: education-entry.tsx  page.tsx
client/app/stats/: page.tsx  (+3 more)
client/components/: icons.tsx  left-sidebar.tsx  main-layout.tsx  theme-toggle.tsx  top-navbar.tsx
init/: 01_init.sql
k3s/: deployment.yaml
k8s/client/: deployment.yaml  ingress.yaml  service.yaml
k8s/db/: configmap.yaml  deployment.yaml  pvc.yaml  service.yaml
k8s/server/: deployment.yaml  ingress.yaml  service.yaml
server/: Cargo.toml  Dockerfile
server/.sqlx/: query-01f4a39124a62cac141d2251c9ab3779f23a4b116d774309fe4cb9a6b1e811b5.json  query-0b5f9a24adc6c88db949f9e407d4d087d5ffa869e7d6de762497b649ef6bb835.json  query-4e3e9c882bc4bc91e13fa3aef34076803023f2d857ff43595311904617403725.json  query-6e650319406b142d7bc47c03fa0ecf53bf7a8a7d4b5d6462f290d0db1cc94518.json  query-932a476ffc79bc4fe8cff9216a5a019e46c5079fd579bf265bd38b23293f8813.json  query-94fd4f8387f2c0f3ed15f8f9c210d38c8e5d05bbc694267b32ea903ca21eb7ee.json  query-a7ba680c55c64bbe51278841b1fcf8f095d474923f9d36d12090a6b29f46a06e.json  query-b8e6483cccfc59d9716ba17705132681a5bb3544d51f5145b01f707f25cd125c.json  query-cd2c11615e22fd1985d690c874c01a198f4d3bfe650dbac889b19c4a204a68ef.json
server/src/: db.rs  main.rs
(+22 files in other folders)
