[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-governor = "0.8.0"
actix-web = "4.10.2"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.27"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["postgres", "time", "runtime-async-std"] }
tokio = "1.44.2"
uuid = { version = "1.16.0", features = ["v4"] }
